--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,6 @@
     "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "gestion-joda-company",
     "NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET": "gestion-joda-company.firebasestorage.app",
     "NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "322749010361",
-    "NEXT_PUBLIC_FIREBASE_APP_ID": "1:322749010361:web:8557224ba6932b0fdde668",
-    "NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID": "G-DJPGEDJYHD"
+    "NEXT_PUBLIC_FIREBASE_APP_ID": "1:322749010361:web:8557224ba6932b0fdde668"
   }
 }
